--- a/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/Configure.cshtml
@@ -80,26 +80,16 @@
                 @Html.ValidationMessageFor(model => model.Signature)
             </td>
         </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.AdditionalFee)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.AdditionalFee)
-                @Html.ValidationMessageFor(model => model.AdditionalFee)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.AdditionalFeePercentage)
-                @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
-            </td>
-        </tr>
-
-        <tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CallbackTimeout)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.CallbackTimeout)
+				@Html.ValidationMessageFor(model => model.CallbackTimeout)
+			</td>
+		</tr>
+        @*<tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.DisplayCheckoutButton)
             </td>
@@ -107,16 +97,16 @@
                 @Html.SettingEditorFor(model => model.DisplayCheckoutButton)
                 @Html.ValidationMessageFor(model => model.DisplayCheckoutButton)
             </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ConfirmedShipment)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ConfirmedShipment)
-                @Html.ValidationMessageFor(model => model.ConfirmedShipment)
-            </td>
-        </tr>
+        </tr>*@
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.ShowButtonInMiniShoppingCart)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.ShowButtonInMiniShoppingCart)
+				@Html.ValidationMessageFor(model => model.ShowButtonInMiniShoppingCart)
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.NoShipmentAddress)
@@ -126,15 +116,15 @@
                 @Html.ValidationMessageFor(model => model.NoShipmentAddress)
             </td>
         </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CallbackTimeout)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.CallbackTimeout)
-                @Html.ValidationMessageFor(model => model.CallbackTimeout)
-            </td>
-        </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.ConfirmedShipment)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.ConfirmedShipment)
+				@Html.ValidationMessageFor(model => model.ConfirmedShipment)
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.DefaultShippingPrice)
@@ -144,9 +134,29 @@
                 @Html.ValidationMessageFor(model => model.DefaultShippingPrice)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.AdditionalFee)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.AdditionalFee)
+				@Html.ValidationMessageFor(model => model.AdditionalFee)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.AdditionalFeePercentage)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.AdditionalFeePercentage)
+				@Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
+			</td>
+		</tr>
         <tr>
-            <td>&nbsp;</td>
-            <td class="button-save">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+            <td class="adminData">
                 <button type="submit" name="save" class="btn btn-primary" value="save">
                     <i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
