--- a/src/Plugins/SmartStore.PayPal/Views/PayPalDirect/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalDirect/Configure.cshtml
@@ -79,6 +79,15 @@
                 @Html.ValidationMessageFor(model => model.Signature)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.IpnChangesPaymentStatus)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.IpnChangesPaymentStatus)
+				@Html.ValidationMessageFor(model => model.IpnChangesPaymentStatus)
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.AdditionalFee)
