--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -912,6 +912,15 @@
 			</td>
 		</tr>
 		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchDescriptions)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.SearchDescriptions)
+				@Html.ValidationMessageFor(model => model.SearchDescriptions)
+			</td>
+		</tr>
+		<tr>
 			<td class="adminSeparator" colspan="2">
 				<hr />
 			</td>
