--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -159,6 +159,9 @@
         }
 
     </script>
+    
+    @Html.Widget("order_edit_top")
+    
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
