--- a/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
@@ -13,6 +13,7 @@
 			<input type="hidden" name="ReturnField" value="@Model.ReturnField" />
 			<input type="hidden" name="MaxReturnValues" value="@Model.MaxReturnValues" />
 			<input type="hidden" name="DisableIf" value="@Model.DisableIf" />
+			<input type="hidden" name="DisableIds" value="@Model.DisableIds" />
 			<input type="hidden" name="PageIndex" value="@Model.PageIndex" />
 
 			@if (Model.Entity.IsCaseInsensitiveEqual("product"))
