--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
@@ -230,7 +230,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td colspan="2" class="adminSeparator">
                 <hr />
             </td>
         </tr>
