Download export file was using wrong profile id

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/InfoDeployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/InfoDeployment.cshtml
@@ -8,7 +8,7 @@
 {
 	<div>
 		@Html.IconForFileExtension(Path.GetExtension(fileName), false)
-		<a href="@Url.Action("DownloadExportFile", new { id = Model.Id, name = fileName })" download>@fileName</a>
+		<a href="@Url.Action("DownloadExportFile", new { id = Model.ProfileId, name = fileName })" download>@fileName</a>
 	</div>
 }
 <div>
