--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
@@ -25,7 +25,7 @@
 
 				<div class="clear"></div>
 				<div class="btn-below">
-					<a id="FileNamePatternDescriptionLink" href="javascript:void(0)">@T("Admin.Common.Show")...</a>
+					<a id="FileNamePatternDescriptionLink" href="javascript:void(0)">@T("Admin.Common.Show")&hellip;</a>
 					<div id="FileNamePatternDescription" class="btn-below hide">
 						@FileNamePatternDescription()
 					</div>
