--- a/src/Presentation/SmartStore.Web/Administration/Views/Country/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Country/_CreateOrUpdate.cshtml
@@ -6,7 +6,7 @@
 @Html.SmartStore().TabStrip().Name("country-edit").Items(x =>
 {
     x.Add().Text(T("Admin.Configuration.Countries.Info").Text).Content(TabInfo()).Selected(true);
-    x.Add().Text(T("Admin.Configuration.Countries.States").Text).Content(TabStates());
+    x.Add().Text("{0} ({1})".FormatInvariant(T("Admin.Configuration.Countries.States"), Model.NumberOfStates)).Content(TabStates());
 	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
     
     //generate an event
@@ -144,14 +144,13 @@
 						{
 							columns.Bound(x => x.Name);
 							//TODO display localized values here
-							columns.Bound(x => x.Abbreviation);
+							columns.Bound(x => x.Abbreviation)
+								.Centered();
 							columns.Bound(x => x.Published)
 								.Template(item => @Html.SymbolForBool(item.Published))
 								.ClientTemplate(@Html.SymbolForBool("Published"))
-								.Width(120)
 								.Centered();
 							columns.Bound(x => x.DisplayOrder1)
-								.Width(120)
 								.Centered();
 							columns.Bound(x => x.Id)
 								.Centered()
@@ -168,7 +167,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td width="100%">
+				<td>
 					<button type="submit" id="btnAddNewState" name="btnAddNewState" class="btn btn-below"
 						onclick="javascript:OpenWindow('@(Url.Action("StateCreatePopup", "Country", new { countryId = Model.Id, btnId = "btnRefresh", formId = "country-form" }))', 800, 250, true); return false;">
 						<i class="fa fa-plus"></i>&nbsp;@T("Admin.Configuration.Countries.States.AddNew")
