CKEditor should not use html entities

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
@@ -38,6 +38,7 @@
             filebrowserImageBrowseUrl: roxyFileman + '?type=image',
             removeDialogTabs: 'link:upload;image:upload',
             fullPage: (fullPage === true) ? true : false,
+			entities: false,
             removePlugins: 'divarea'
         });
     });
