Resolves #571 Option to display another checkbox on confirm page to let the customer accept that his email address can be handed over to a third party Resolves #864 Missing language resource: admin.common.ignore

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -892,6 +892,14 @@
                 <hr />
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.AcceptThirdPartyEmailHandOver)
+			</td>
+			<td class="adminData">
+				@(Model.AcceptThirdPartyEmailHandOver ? T("Common.Yes") : T("Common.No"))
+			</td>
+		</tr>
         <tr>
             <td colspan="2">
                 @if (Model.CustomerComment.HasValue())
