--- a/src/Presentation/SmartStore.Web/Views/Common/AccountDropdown.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/AccountDropdown.cshtml
@@ -64,7 +64,8 @@
             <li>
                 <a href="@Url.RouteUrl("Wishlist")">
                     <i class="fa fa-fw fa-heart"></i>
-                    @T("Wishlist") <span class="wishlist-qty badge @(Model.WishlistItems > 0 ? "badge-success" : "")">@Model.WishlistItems</span></a> 
+                    @T("Wishlist") <span class="wishlist-qty badge @(Model.WishlistItems > 0 ? "badge-success" : "")">@Model.WishlistItems</span>
+				</a> 
             </li>
         }
         @if (Model.ShoppingCartEnabled)
@@ -72,14 +73,16 @@
             <li id="topcartlink">
                 <a href="@Url.RouteUrl("ShoppingCart")">
                     <i class="fa fa-fw fa-shopping-cart"></i>
-                    @T("ShoppingCart") <span class="cart-qty badge @(Model.ShoppingCartItems > 0 ? "badge-success" : "")" data-bind-to="TotalProducts">@Model.ShoppingCartItems</span></a>
+                    @T("ShoppingCart") <span class="cart-qty badge @(Model.ShoppingCartItems > 0 ? "badge-success" : "")" data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
+				</a>
             </li>
         }
         <li class="divider"></li>
         <li>
             <a href="@Url.RouteUrl("Logout")" rel="nofollow">
                 <i class="fa fa-fw fa-sign-out"></i>
-                @T("Account.Logout")</a>
+                @T("Account.Logout")
+			</a>
         </li>
 
         @Html.Widget("account_dropdown_after")
