Fixed ajax cache issue when saving payment or shipping restrictions. Internet Explorer showed the old data state (before storage).

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/_CreateOrUpdateMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/_CreateOrUpdateMethod.cshtml
@@ -109,10 +109,15 @@
 		}
 
 		function getFilterConfiguration(url, container) {
-			$.get(url, function (html) {
-				container.append(html);
-				if (++i < configUrls.length)
-					getFilterConfiguration(configUrls[i], container);
+			$.ajax({
+				url: url,
+				cache: false,
+				dataType: 'html',
+				success: function (html) {
+					container.append(html);
+					if (++i < configUrls.length)
+						getFilterConfiguration(configUrls[i], container);
+				}
 			});
 		}
     });
