--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -200,6 +200,11 @@
 
 @helper TabPartition()
 {
+	<div class="alert alert-info">
+		<button type="button" class="close" data-dismiss="alert">&#215;</button>
+		@Html.Raw(T("Admin.DataExchange.Export.Partition.Note"))
+	</div>
+
 	<table class="adminContent">
 		<tr>
 			<td class="adminTitle">
@@ -273,7 +278,7 @@
 			@if (Model.Provider.ConfigPartialViewName.HasValue())
 			{
 				<div class="alert alert-info">
-					<button type="button" class="close" data-dismiss="alert">×</button>
+					<button type="button" class="close" data-dismiss="alert">&#215;</button>
 					@Html.Raw(T("Admin.DataExchange.Export.Configuration.Note"))
 				</div>
 				
