Resolves #885 Export: Implement filter criteria for newsletter subscriber export

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -247,7 +247,9 @@
 
 @helper TabFilter()
 {
-	if (Model.Provider.EntityType == ExportEntityType.Product || Model.Provider.EntityType == ExportEntityType.Order)
+	if (Model.Provider.EntityType == ExportEntityType.Product ||
+		Model.Provider.EntityType == ExportEntityType.Order || 
+		Model.Provider.EntityType == ExportEntityType.NewsLetterSubscription)
 	{
 		<div class="alert alert-info">@Html.Raw(T("Admin.DataExchange.Export.Filter.Note"))</div>
 		@Html.Partial("_Tab.Filter", Model)
