Resolves #883 Export: Implement filter criteria for customer export

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -248,6 +248,7 @@
 @helper TabFilter()
 {
 	if (Model.Provider.EntityType == ExportEntityType.Product ||
+		Model.Provider.EntityType == ExportEntityType.Customer ||
 		Model.Provider.EntityType == ExportEntityType.Order || 
 		Model.Provider.EntityType == ExportEntityType.NewsLetterSubscription)
 	{
