--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Filter.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Filter.cshtml
@@ -145,6 +145,96 @@
 			</td>
 		</tr>
 	}
+	else if (Model.Provider.EntityType == ExportEntityType.Customer)
+	{
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.IsActiveCustomer)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(x => x.Filter.IsActiveCustomer)
+				@Html.ValidationMessageFor(x => x.Filter.IsActiveCustomer)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.IsTaxExempt)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(x => x.Filter.IsTaxExempt)
+				@Html.ValidationMessageFor(x => x.Filter.IsTaxExempt)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.CustomerRoleIds)
+			</td>
+			<td class="adminData">
+				@Html.ListBoxFor(x => x.Filter.CustomerRoleIds,
+					 new MultiSelectList(Model.Filter.AvailableCustomerRoles, "Value", "Text"),
+					 new { multiple = "multiple", @class = "control-xlarge" })
+				@Html.ValidationMessageFor(x => x.Filter.CustomerRoleIds)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.BillingCountryIds)
+			</td>
+			<td class="adminData">
+				@Html.ListBoxFor(x => x.Filter.BillingCountryIds,
+					 new MultiSelectList(Model.Filter.AvailableCountries, "Value", "Text"),
+					 new { multiple = "multiple", @class = "control-xlarge" })
+				@Html.ValidationMessageFor(x => x.Filter.BillingCountryIds)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.ShippingCountryIds)
+			</td>
+			<td class="adminData">
+				@Html.ListBoxFor(x => x.Filter.ShippingCountryIds,
+					 new MultiSelectList(Model.Filter.AvailableCountries, "Value", "Text"),
+					 new { multiple = "multiple", @class = "control-xlarge" })
+				@Html.ValidationMessageFor(x => x.Filter.ShippingCountryIds)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.LastActivityFrom)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(x => x.Filter.LastActivityFrom)
+				@Html.ValidationMessageFor(x => x.Filter.LastActivityFrom)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.LastActivityTo)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(x => x.Filter.LastActivityTo)
+				@Html.ValidationMessageFor(x => x.Filter.LastActivityTo)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.HasSpentAtLeastAmount)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(x => x.Filter.HasSpentAtLeastAmount)
+				@Html.ValidationMessageFor(x => x.Filter.HasSpentAtLeastAmount)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(x => x.Filter.HasPlacedAtLeastOrders)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(x => x.Filter.HasPlacedAtLeastOrders)
+				@Html.ValidationMessageFor(x => x.Filter.HasPlacedAtLeastOrders)
+			</td>
+		</tr>
+	}
 	else if (Model.Provider.EntityType == ExportEntityType.Order)
 	{
 		if (Model.StoreCount > 1)
@@ -208,17 +298,6 @@
 					 new MultiSelectList(Model.Filter.AvailableShippingStates, "Value", "Text"),
 					 new { multiple = "multiple", @class = "control-xlarge" })
 				@Html.ValidationMessageFor(x => x.Filter.ShippingStatusIds)
-			</td>
-		</tr>
-		<tr>
-			<td class="adminTitle">
-				@Html.SmartLabelFor(x => x.Filter.CustomerRoleIds)
-			</td>
-			<td class="adminData">
-				@Html.ListBoxFor(x => x.Filter.CustomerRoleIds,
-					 new MultiSelectList(Model.Filter.AvailableCustomerRoles, "Value", "Text"),
-					 new { multiple = "multiple", @class = "control-xlarge" })
-				@Html.ValidationMessageFor(x => x.Filter.CustomerRoleIds)
 			</td>
 		</tr>
 	}
